--- a/04-What's-The-Weather/index.html
+++ b/04-What's-The-Weather/index.html
@@ -21,6 +21,10 @@
         <img class="weather-icon" />
         <h1 class="temp"></h1>
         <h2 class="city"></h2>
+        <div class="HLTemp">
+          <p class="highest"></p>
+          <p class="lowest"></p>
+        </div>
         <div class="details">
           <div class="col">
             <img src="images/humidity.png" />
