"feels like" temperature added

--- a/04-What's-The-Weather/index.html
+++ b/04-What's-The-Weather/index.html
@@ -70,10 +70,17 @@
                 <!-- <p>Sunset</p> -->
               </div>
             </div>
+            <div class="feels">
+              <div class="feelsLike">
+                <img src="images/feelsLike.png" />
+                <div>
+                  <p class="label">Feels like</p>
+                  <p class="feelsLikeTemp"></p>
+                </div>
+              </div>
+            </div>
           </div>
-          <div id="map">
-            <!-- <img src="images/nightSky.jpg" /> -->
-          </div>
+          <div id="map"></div>
         </div>
       </div>
     </div>
