code architecture is added

--- a/04-What's-The-Weather/index.html
+++ b/04-What's-The-Weather/index.html
@@ -16,8 +16,10 @@
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
       crossorigin=""
     ></script>
+    <script type="module" src="main.js"></script>
   </head>
-  <body onLoad="currentLocation()">
+  <!-- <body onLoad="currentLocation()"> -->
+  <body>
     <div class="card">
       <div class="search">
         <input
@@ -84,6 +86,6 @@
         </div>
       </div>
     </div>
-    <script defer src="main.js"></script>
+    <!-- <script type="module" src="main.js"></script> -->
   </body>
 </html>
