back to current location button added

--- a/04-What's-The-Weather/index.html
+++ b/04-What's-The-Weather/index.html
@@ -22,6 +22,9 @@
   <body>
     <div class="card">
       <div class="search">
+        <button class="btn-currentLocation">
+          <img src="images/pointer.png" />
+        </button>
         <input
           class="cityInput"
           type="text"
