add a new question tab is added

--- a/05-FAQ/index.html
+++ b/05-FAQ/index.html
@@ -14,10 +14,10 @@
       <div class="questionPanel">
         <div class="panel">
           <div>
-            <h2 class="question1">How do I reset my password</h2>
+            <h2 class="question">How do I reset my password</h2>
           </div>
           <div>
-            <button class="btn btn1">+</button>
+            <button class="btn">+</button>
           </div>
         </div>
         <div class="answerBox hidden">
@@ -35,10 +35,10 @@
       <div class="questionPanel">
         <div class="panel">
           <div>
-            <h2 class="question2">How can I lose weight</h2>
+            <h2 class="question">How can I lose weight</h2>
           </div>
           <div>
-            <button class="btn btn2">+</button>
+            <button class="btn">+</button>
           </div>
         </div>
         <div class="answerBox hidden">
@@ -57,10 +57,10 @@
       <div class="questionPanel">
         <div class="panel">
           <div>
-            <h2 class="question3">How do I boost my productivity</h2>
+            <h2 class="question">How do I boost my productivity</h2>
           </div>
           <div>
-            <button class="btn btn3">+</button>
+            <button class="btn">+</button>
           </div>
         </div>
         <div class="answerBox hidden">
@@ -75,6 +75,26 @@
             processes. By adopting these strategies, you"ll enhance your
             productivity and achieve better results.
           </p>
+        </div>
+      </div>
+    </div>
+    <div class="addQuestionPanel">
+      <button class="btnAddQuestion">+</button>
+    </div>
+    <div class="addNewQuestionPanel hidden">
+      <div class="closeButton">
+        <button class="btnClose">X</button>
+      </div>
+      <h1 class="title">Add a new question</h1>
+      <div class="newQuestionInfo">
+        <div class="whatsTheQuestion">
+          <h2>What's the question?</h2>
+          <input type="text" class="questionBox" />
+          <h2>What is the answer?</h2>
+          <textarea rows="9" class="BoxForAnswer" wrap="soft"></textarea>
+        </div>
+        <div class="submitButton">
+          <button class="submit">Add</button>
         </div>
       </div>
     </div>
