countries added, phone pattern is also added

--- a/06-Validation-Form/index.html
+++ b/06-Validation-Form/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Validation Form</title>
     <link rel="stylesheet" href="style.css" />
-    <script defer src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </head>
   <body>
     <div class="bigPanel">
@@ -46,6 +46,12 @@
               </div>
               <h2 class="Phone name">Phone:</h2>
               <div class="inputBox">
+                <!-- <div class="dropDown">
+                  <button class="btnDropDown">↓</button>
+                  <div>
+                    <a href="#">link1</a>
+                  </div>
+                </div> -->
                 <input
                   class="inputPhone input"
                   type="text"
