password validation is added

--- a/06-Validation-Form/index.html
+++ b/06-Validation-Form/index.html
@@ -62,8 +62,8 @@
               <h2 class="password name">Password:</h2>
               <div class="inputBox">
                 <input
-                  class="Input Password input"
-                  type="text"
+                  class="inputPassword input"
+                  type="password"
                   placeholder="Input password"
                 />
                 <img class="validator" />
