submit button functionality is added

--- a/06-Validation-Form/index.html
+++ b/06-Validation-Form/index.html
@@ -24,7 +24,7 @@
                   type="text"
                   placeholder="Input your first name"
                 />
-                <img class="validator hidden" />
+                <img class="validator" />
               </div>
               <h2 class="lastName name">Last Name:</h2>
               <div class="inputBox">
