error message added for invalid input

--- a/06-Validation-Form/index.html
+++ b/06-Validation-Form/index.html
@@ -17,7 +17,10 @@
           <div class="form">
             <div class="heading">Validation Form</div>
             <div class="fields">
-              <h2 class="firstName name">First Name:</h2>
+              <div class="top">
+                <h2 class="firstName name">First Name:</h2>
+                <span class="error-message">Please enter first name</span>
+              </div>
               <div class="inputBox">
                 <input
                   class="inputFirstName input"
@@ -26,7 +29,10 @@
                 />
                 <img class="validator" />
               </div>
-              <h2 class="lastName name">Last Name:</h2>
+              <div class="top">
+                <h2 class="lastName name">Last Name:</h2>
+                <span class="error-message">Please enter last name</span>
+              </div>
               <div class="inputBox">
                 <input
                   class="inputLastName input"
@@ -35,7 +41,10 @@
                 />
                 <img class="validator" />
               </div>
-              <h2 class="email name">Email:</h2>
+              <div class="top">
+                <h2 class="email name">Email:</h2>
+                <span class="error-message">Please enter valid email</span>
+              </div>
               <div class="inputBox">
                 <input
                   class="inputEmail input"
@@ -44,14 +53,13 @@
                 />
                 <img class="validator" />
               </div>
-              <h2 class="Phone name">Phone:</h2>
+              <div class="top">
+                <h2 class="Phone name">Phone:</h2>
+                <span class="error-message"
+                  >Please enter valid phone number</span
+                >
+              </div>
               <div class="inputBox">
-                <!-- <div class="dropDown">
-                  <button class="btnDropDown">↓</button>
-                  <div>
-                    <a href="#">link1</a>
-                  </div>
-                </div> -->
                 <input
                   class="inputPhone input"
                   type="text"
@@ -59,7 +67,10 @@
                 />
                 <img class="validator" />
               </div>
-              <h2 class="password name">Password:</h2>
+              <div class="top">
+                <h2 class="password name">Password:</h2>
+                <span class="error-message">Please enter valid password</span>
+              </div>
               <div class="inputBox">
                 <input
                   class="inputPassword input"
