dropdown menu for country codes is added

--- a/06-Validation-Form/index.html
+++ b/06-Validation-Form/index.html
@@ -59,9 +59,10 @@
                   >Please enter valid phone number</span
                 >
               </div>
-              <div class="inputBox">
+              <div class="inputBox phone">
+                <select class="selectedCountryCode"></select>
                 <input
-                  class="inputPhone input"
+                  class="inputPhone"
                   type="text"
                   placeholder="Input Phone"
                 />
