country code is added - phone validation tbd

--- a/06-Validation-Form/index.html
+++ b/06-Validation-Form/index.html
@@ -63,7 +63,7 @@
                 <select class="selectedCountryCode"></select>
                 <input
                   class="inputPhone"
-                  type="text"
+                  type="number"
                   placeholder="Input Phone"
                 />
                 <img class="validator" />
