decimal point is added

--- a/07-Calculator/index.html
+++ b/07-Calculator/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="bigPanel">
       <div class="displayPanel">
-        <input class="display" type="number" readonly />
+        <input class="display" type="text" readonly />
       </div>
       <div class="controlsPanel">
         <div class="leftSide">
