--- a/08-Notes/index.html
+++ b/08-Notes/index.html
@@ -10,10 +10,9 @@
       <div class="frontPage">
         <div class="topPanel">
           <div class="heading">
-            <p>All iCloud</p>
+            <h1>All Notes</h1>
           </div>
-
-          <input type="text" class="searchBar" />
+          <input type="text" class="searchBar" placeholder="🔎 Search" />
         </div>
         <div class="allNotesPanel"></div>
         <div class="bottomNavPanel"></div>
