navigation bar is added

--- a/08-Notes/index.html
+++ b/08-Notes/index.html
@@ -48,7 +48,10 @@
             <p class="description">First line of the note8</p>
           </div>
         </div>
-        <div class="bottomNavPanel"></div>
+        <div class="bottomNavPanel">
+          <p class="countOfNotes">Notes: 1111</p>
+          <button class="BtnNewLetter">📝</button>
+        </div>
       </div>
       <div class="notePage"></div>
     </div>
