note page is added

--- a/08-Notes/index.html
+++ b/08-Notes/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="bigPanel">
-      <div class="frontPage">
+      <div class="frontPage hidden">
         <div class="topPanel">
           <div class="heading">
             <h1>All Notes</h1>
@@ -53,7 +53,22 @@
           <button class="BtnNewLetter">📝</button>
         </div>
       </div>
-      <div class="notePage"></div>
+      <div class="notePage">
+        <div class="topNavigationBar">
+          <button class="backToFrontPage">←Notes</button>
+          <button class="doneButton">Done</button>
+        </div>
+        <div class="noteContentPanel">
+          <div class="titleOfNotePanel">
+            <input class="headingOfNote" type="text" placeholder="Title" />
+          </div>
+          <div class="contentOfNotePanel">
+            <textarea class="contentOfNote">
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nam harum omnis quia consectetur culpa veritatis adipisci! Ab aspernatur eveniet numquam similique iusto ut, sapiente, quibusdam quae quisquam voluptate ullam? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id illum facere, ex laborum, tenetur voluptatem minus aliquam itaque ullam facilis repudiandae aspernatur reiciendis commodi suscipit fugiat quibusdam, harum ut ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat illo, laborum eaque autem non eum eveniet aspernatur quae quia accusamus esse rem delectus magni earum aperiam doloribus, id, quod nulla.</textarea
+            >
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
