navigation buttons are added functionality

--- a/08-Notes/index.html
+++ b/08-Notes/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="bigPanel">
-      <div class="frontPage hidden">
+      <div class="frontPage page">
         <div class="topPanel">
           <div class="heading">
             <h1>All Notes</h1>
@@ -50,13 +50,13 @@
         </div>
         <div class="bottomNavPanel">
           <p class="countOfNotes">Notes: 1111</p>
-          <button class="BtnNewLetter">📝</button>
+          <button class="BtnNewLetter btn">📝</button>
         </div>
       </div>
-      <div class="notePage">
+      <div class="notePage page hidden">
         <div class="topNavigationBar">
-          <button class="backToFrontPage">←Notes</button>
-          <button class="doneButton">Done</button>
+          <button class="backToFrontPage btn">←Notes</button>
+          <button class="doneButton btn">Done</button>
         </div>
         <div class="noteContentPanel">
           <div class="titleOfNotePanel">
