some AllNotes panel issues are fixed

--- a/08-Notes/index.html
+++ b/08-Notes/index.html
@@ -14,8 +14,9 @@
           </div>
           <input type="text" class="searchBar" placeholder="🔎 Search" />
         </div>
-        <div class="allNotesPanel">
-          <div class="note">
+        <div class="notes">
+          <div class="allNotesPanel">
+            <!-- <div class="note">
             <p class="title">Title</p>
             <p class="description">First line of the note</p>
           </div>
@@ -30,8 +31,8 @@
           <div class="note">
             <p class="title">Title4</p>
             <p class="description">First line of the note4</p>
-          </div>
-          <div class="note">
+          </div> -->
+            <!-- <div class="note">
             <p class="title">Title5</p>
             <p class="description">First line of the note5</p>
           </div>
@@ -46,11 +47,12 @@
           <div class="note">
             <p class="title">Title8</p>
             <p class="description">First line of the note8</p>
+          </div> -->
           </div>
         </div>
         <div class="bottomNavPanel">
           <p class="countOfNotes">Notes: 1111</p>
-          <button class="BtnNewLetter btn">📝</button>
+          <button class="BtnNewLetter">📝</button>
         </div>
       </div>
       <div class="notePage page hidden">
@@ -63,9 +65,7 @@
             <input class="headingOfNote" type="text" placeholder="Title" />
           </div>
           <div class="contentOfNotePanel">
-            <textarea class="contentOfNote">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nam harum omnis quia consectetur culpa veritatis adipisci! Ab aspernatur eveniet numquam similique iusto ut, sapiente, quibusdam quae quisquam voluptate ullam? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id illum facere, ex laborum, tenetur voluptatem minus aliquam itaque ullam facilis repudiandae aspernatur reiciendis commodi suscipit fugiat quibusdam, harum ut ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat illo, laborum eaque autem non eum eveniet aspernatur quae quia accusamus esse rem delectus magni earum aperiam doloribus, id, quod nulla.</textarea
-            >
+            <textarea class="contentOfNote" placeholder="Content"></textarea>
           </div>
         </div>
       </div>
