--- a/08-Notes/index.html
+++ b/08-Notes/index.html
@@ -15,43 +15,10 @@
           <input type="text" class="searchBar" placeholder="🔎 Search" />
         </div>
         <div class="notes">
-          <div class="allNotesPanel">
-            <!-- <div class="note">
-            <p class="title">Title</p>
-            <p class="description">First line of the note</p>
-          </div>
-          <div class="note">
-            <p class="title">Title2</p>
-            <p class="description">First line of the note2</p>
-          </div>
-          <div class="note">
-            <p class="title">Title3</p>
-            <p class="description">First line of the note3</p>
-          </div>
-          <div class="note">
-            <p class="title">Title4</p>
-            <p class="description">First line of the note4</p>
-          </div> -->
-            <!-- <div class="note">
-            <p class="title">Title5</p>
-            <p class="description">First line of the note5</p>
-          </div>
-          <div class="note">
-            <p class="title">Title6</p>
-            <p class="description">First line of the note6</p>
-          </div>
-          <div class="note">
-            <p class="title">Title7</p>
-            <p class="description">First line of the note7</p>
-          </div>
-          <div class="note">
-            <p class="title">Title8</p>
-            <p class="description">First line of the note8</p>
-          </div> -->
-          </div>
+          <div class="allNotesPanel"></div>
         </div>
         <div class="bottomNavPanel">
-          <p class="countOfNotes">Notes: 1111</p>
+          <p class="countOfNotes"></p>
           <button class="BtnNewLetter">📝</button>
         </div>
       </div>
