delete note button is added and functioanlity

--- a/08-Notes/index.html
+++ b/08-Notes/index.html
@@ -25,6 +25,7 @@
       <div class="notePage page hidden">
         <div class="topNavigationBar">
           <button class="backToFrontPage btn">←Notes</button>
+          <button class="deleteNote">🗑️</button>
           <button class="doneButton btn">Done</button>
         </div>
         <div class="noteContentPanel">
