--- a/09-Memory-Game/index.html
+++ b/09-Memory-Game/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
     <div class="gamePanel">
+      <div class="topPanel">
+        <button class="restartGame btn">Restart</button>
+        <!-- this dive should be a text for the time left -->
+        <div class="timeLeft">Time Left 1:00</div>
+      </div>
       <div class="gameGrid">
         <div class="img">1</div>
         <div class="img">2</div>
