--- a/09-Memory-Game/index.html
+++ b/09-Memory-Game/index.html
@@ -13,26 +13,28 @@
         <div class="timeLeft">Time Left 1:00</div>
       </div>
       <div class="gameGrid">
-        <div class="img">1</div>
-        <div class="img">2</div>
-        <div class="img">3</div>
-        <div class="img">4</div>
-        <div class="img">5</div>
-        <div class="img">6</div>
-        <div class="img">7</div>
-        <div class="img">8</div>
-        <div class="img">9</div>
-        <div class="img">10</div>
-        <div class="img">11</div>
-        <div class="img">12</div>
-        <div class="img">13</div>
-        <div class="img">14</div>
-        <div class="img">15</div>
-        <div class="img">16</div>
-        <div class="img">17</div>
-        <div class="img">18</div>
-        <div class="img">19</div>
-        <div class="img">20</div>
+        <div>
+          <img class="imgg" src="./images/circle.png" />
+        </div>
+        <div><img class="imgg" src="./images/hexagon.png" /></div>
+        <div><img class="imgg" src="./images/triangle.png" /></div>
+        <div><img class="imgg" src="./images/trapezium.png" /></div>
+        <div><img class="imgg" src="./images/square.png" /></div>
+        <div><img class="imgg" src="./images/rhombus.png" /></div>
+        <div><img class="imgg" src="./images/oval.png" /></div>
+        <div><img class="imgg" src="./images/rhombus.png" /></div>
+        <div><img class="imgg" src="./images/circle.png" /></div>
+        <div><img class="imgg" src="./images/rectangle.png" /></div>
+        <div><img class="imgg" src="./images/octagon.png" /></div>
+        <div><img class="imgg" src="./images/trapezium.png" /></div>
+        <div><img class="imgg" src="./images/oval.png" /></div>
+        <div><img class="imgg" src="./images/rectangle.png" /></div>
+        <div><img class="imgg" src="./images/triangle.png" /></div>
+        <div><img class="imgg" src="./images/hexagon.png" /></div>
+        <div><img class="imgg" src="./images/square.png" /></div>
+        <div><img class="imgg" src="./images/pentagon.png" /></div>
+        <div><img class="imgg" src="./images/pentagon.png" /></div>
+        <div><img class="imgg" src="./images/octagon.png" /></div>
       </div>
     </div>
   </body>
