randomize cards is added

--- a/09-Memory-Game/index.html
+++ b/09-Memory-Game/index.html
@@ -13,28 +13,26 @@
         <div class="timeLeft">Time Left 1:00</div>
       </div>
       <div class="gameGrid">
-        <div>
-          <img class="imgg" src="./images/circle.png" />
-        </div>
-        <div><img class="imgg" src="./images/hexagon.png" /></div>
-        <div><img class="imgg" src="./images/triangle.png" /></div>
-        <div><img class="imgg" src="./images/trapezium.png" /></div>
-        <div><img class="imgg" src="./images/square.png" /></div>
-        <div><img class="imgg" src="./images/rhombus.png" /></div>
-        <div><img class="imgg" src="./images/oval.png" /></div>
-        <div><img class="imgg" src="./images/rhombus.png" /></div>
-        <div><img class="imgg" src="./images/circle.png" /></div>
-        <div><img class="imgg" src="./images/rectangle.png" /></div>
-        <div><img class="imgg" src="./images/octagon.png" /></div>
-        <div><img class="imgg" src="./images/trapezium.png" /></div>
-        <div><img class="imgg" src="./images/oval.png" /></div>
-        <div><img class="imgg" src="./images/rectangle.png" /></div>
-        <div><img class="imgg" src="./images/triangle.png" /></div>
-        <div><img class="imgg" src="./images/hexagon.png" /></div>
-        <div><img class="imgg" src="./images/square.png" /></div>
-        <div><img class="imgg" src="./images/pentagon.png" /></div>
-        <div><img class="imgg" src="./images/pentagon.png" /></div>
-        <div><img class="imgg" src="./images/octagon.png" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
+        <div><img class="img" /></div>
       </div>
     </div>
   </body>
