--- a/09-Memory-Game/index.html
+++ b/09-Memory-Game/index.html
@@ -13,7 +13,10 @@
         <div class="timeLeft">Time Left 1:00</div>
       </div>
       <div class="gameGrid">
-        <div><img class="img" /></div>
+        <div class="first">
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
         <div><img class="img" /></div>
         <div><img class="img" /></div>
         <div><img class="img" /></div>
