all panels are flipping

--- a/09-Memory-Game/index.html
+++ b/09-Memory-Game/index.html
@@ -13,29 +13,86 @@
         <div class="timeLeft">Time Left 1:00</div>
       </div>
       <div class="gameGrid">
-        <div class="first">
+        <div>
           <img class="img" />
           <div class="backSide hidden"></div>
         </div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
-        <div><img class="img" /></div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
+        <div>
+          <img class="img" />
+          <div class="backSide hidden"></div>
+        </div>
       </div>
     </div>
   </body>
