--- a/09-Memory-Game/index.html
+++ b/09-Memory-Game/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="style.css" />
     <script defer src="main.js"></script>
   </head>
-  <body>
+  <body onload="reloadBoard()">
     <div class="gamePanel">
       <div class="topPanel">
-        <button class="restartGame btn">Restart</button>
+        <button class="restartGame">Restart</button>
         <!-- this dive should be a text for the time left -->
         <div class="timeLeft">Time Left 1:00</div>
       </div>
