--- a/09-Memory-Game/index.html
+++ b/09-Memory-Game/index.html
@@ -9,93 +9,92 @@
     <div class="gamePanel">
       <div class="topPanel">
         <button class="restartGame">Restart</button>
-        <!-- this dive should be a text for the time left -->
         <div class="timeLeft">Time Left 4:00</div>
       </div>
       <div class="gameGrid">
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
         <div class="cell">
-          <img class="img" />
-          <div class="backSide hidden"></div>
+          <img class="img hidden" />
+          <div class="backSide"></div>
         </div>
       </div>
       <div class="messagePanel hiddenPanel">
-        <div class="message">You win!</div>
+        <div class="message"></div>
         <button class="playAgain">Play Again</button>
       </div>
     </div>
