bussines architecture added

--- a/09-Memory-Game/index.html
+++ b/09-Memory-Game/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Memory Game</title>
     <link rel="stylesheet" href="style.css" />
-    <script defer src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </head>
-  <body onload="reloadBoard()">
+  <body>
     <div class="gamePanel">
       <div class="topPanel">
         <button class="restartGame">Restart</button>
