--- a/10-Trivia-Game/index.html
+++ b/10-Trivia-Game/index.html
@@ -17,7 +17,7 @@
           ASNWER IT???
         </div>
         <div class="answersPanel">
-          <div class="multipleChoise">
+          <div class="multipleChoise hidden">
             <button class="btn">1</button>
             <button class="btn">2</button>
 
@@ -25,7 +25,7 @@
             <button class="btn">4</button>
           </div>
 
-          <div class="boolean hidden">
+          <div class="boolean">
             <button class="btn true">True</button>
             <button class="btn false">False</button>
           </div>
