question type and difficulty are added to the DOM

--- a/10-Trivia-Game/index.html
+++ b/10-Trivia-Game/index.html
@@ -10,7 +10,7 @@
       <div class="gamePanel">
         <div class="topPanel">
           <div class="questionType">Question type</div>
-          <div class="dificutly">Hard</div>
+          <div class="difficulty">Hard</div>
         </div>
         <div class="questionPanel">
           THIS IS THE QUESTION THAT IS GOING TO BE POTENTIALLY ASKED PLEASE
