--- a/10-Trivia-Game/index.html
+++ b/10-Trivia-Game/index.html
@@ -17,14 +17,14 @@
           ASNWER IT???
         </div>
         <div class="answersPanel">
-          <div class="multipleChoise hidden">
+          <div class="multipleChoise">
             <button class="btn">1</button>
             <button class="btn">2</button>
 
             <button class="btn">3</button>
             <button class="btn">4</button>
           </div>
-          <div class="boolean">
+          <div class="boolean hidden">
             <button class="btn true">True</button>
             <button class="btn false">False</button>
           </div>
