--- a/10-Trivia-Game/index.html
+++ b/10-Trivia-Game/index.html
@@ -17,16 +17,16 @@
           ASNWER IT???
         </div>
         <div class="answersPanel">
-          <div class="multipleChoise">
+          <div class="multipleChoise answ">
             <button class="btn">1</button>
             <button class="btn">2</button>
 
             <button class="btn">3</button>
             <button class="btn">4</button>
           </div>
-          <div class="boolean hidden">
-            <button class="btn true">True</button>
-            <button class="btn false">False</button>
+          <div class="boolean hidden answ">
+            <button class="btn bool">True</button>
+            <button class="btn bool">False</button>
           </div>
         </div>
       </div>
