--- a/10-Trivia-Game/index.html
+++ b/10-Trivia-Game/index.html
@@ -30,6 +30,11 @@
           </div>
         </div>
       </div>
+      <div class="messagePanel hidden">
+        <div class="message"></div>
+        <div class="score">10/10</div>
+        <button class="playAgain">Play Again</button>
+      </div>
     </div>
   </body>
 </html>
