code working - not refactored

--- a/10-Trivia-Game/index.html
+++ b/10-Trivia-Game/index.html
@@ -21,13 +21,13 @@
             <button class="btn">1</button>
             <button class="btn">2</button>
 
-            <button class="btn">3</button>
-            <button class="btn">4</button>
+            <button class="btn bool">3</button>
+            <button class="btn bool">4</button>
           </div>
-          <div class="boolean hidden answ">
+          <!-- <div class="boolean hidden answ">
             <button class="btn bool">True</button>
             <button class="btn bool">False</button>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="messagePanel hidden">
