html cleaned up

--- a/10-Trivia-Game/index.html
+++ b/10-Trivia-Game/index.html
@@ -12,27 +12,19 @@
           <div class="questionType">Question type</div>
           <div class="difficulty">Hard</div>
         </div>
-        <div class="questionPanel">
-          THIS IS THE QUESTION THAT IS GOING TO BE POTENTIALLY ASKED PLEASE
-          ASNWER IT???
-        </div>
+        <div class="questionPanel"></div>
         <div class="answersPanel">
           <div class="multipleChoise answ">
-            <button class="btn">1</button>
-            <button class="btn">2</button>
-
-            <button class="btn bool">3</button>
-            <button class="btn bool">4</button>
+            <button class="btn"></button>
+            <button class="btn"></button>
+            <button class="btn bool"></button>
+            <button class="btn bool"></button>
           </div>
-          <!-- <div class="boolean hidden answ">
-            <button class="btn bool">True</button>
-            <button class="btn bool">False</button>
-          </div> -->
         </div>
       </div>
       <div class="messagePanel hidden">
         <div class="message"></div>
-        <div class="score">10/10</div>
+        <div class="score"></div>
         <button class="playAgain">Play Again</button>
       </div>
     </div>
