--- a/10-Trivia-Game/index.html
+++ b/10-Trivia-Game/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Trivia Game</title>
     <link rel="stylesheet" href="style.css" />
-    <script defer src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </head>
   <body>
     <div class="bigPanel">
