stones bugs not solved

--- a/11-Go-Game/index.html
+++ b/11-Go-Game/index.html
@@ -173,11 +173,16 @@
           <div class="redGrid"></div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
+          <div class="redGrid">
+            <div class="blueStone"></div>
+          </div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
-          <div class="redGrid"></div>
-          <div class="redGrid"></div>
+          <div class="redGrid">
+            <!-- <div class="blueStone"></div>
+          </div> -->
+          </div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
