--- a/11-Go-Game/index.html
+++ b/11-Go-Game/index.html
@@ -174,16 +174,23 @@
           <div class="redGrid"></div>
           <div class="redGrid"></div>
           <div class="redGrid">
-            <div class="blueStone"></div>
+            <div class="stone">
+              <div class="blueStone"></div>
+            </div>
           </div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
           <div class="redGrid">
-            <!-- <div class="blueStone"></div>
-          </div> -->
+            <div class="stone">
+              <div class="blueStone"></div>
+            </div>
           </div>
-          <div class="redGrid"></div>
+          <div class="redGrid">
+            <div class="stone">
+              <div class="redStone"></div>
+            </div>
+          </div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
