--- a/11-Go-Game/index.html
+++ b/11-Go-Game/index.html
@@ -174,21 +174,21 @@
           <div class="redGrid"></div>
           <div class="redGrid"></div>
           <div class="redGrid">
-            <div class="stone">
-              <div class="blueStone"></div>
+            <div class="stoneHolder">
+              <div class="stone"></div>
             </div>
           </div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
           <div class="redGrid">
-            <div class="stone">
-              <div class="blueStone"></div>
+            <div class="stoneHolder">
+              <div class="stone"></div>
             </div>
           </div>
           <div class="redGrid">
-            <div class="stone">
-              <div class="redStone"></div>
+            <div class="stoneHolder">
+              <div class="stone"></div>
             </div>
           </div>
           <div class="redGrid"></div>
