player's turn added

--- a/11-Go-Game/index.html
+++ b/11-Go-Game/index.html
@@ -6,6 +6,9 @@
     <script defer src="main.js"></script>
   </head>
   <body>
+    <div class="playerHolder">
+      <div class="player">Player's turn: 0</div>
+    </div>
     <div class="bigPanel">
       <div class="gameBoard">
         <div class="grid">
@@ -173,24 +176,12 @@
           <div class="redGrid"></div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
-          <div class="redGrid">
-            <div class="stoneHolder">
-              <div class="stone"></div>
-            </div>
-          </div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
-          <div class="redGrid">
-            <div class="stoneHolder">
-              <div class="stone"></div>
-            </div>
-          </div>
-          <div class="redGrid">
-            <div class="stoneHolder">
-              <div class="stone"></div>
-            </div>
-          </div>
+          <div class="redGrid"></div>
+          <div class="redGrid"></div>
+          <div class="redGrid"></div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
           <div class="redGrid"></div>
